--- a/shop/category/templates/create_category.html
+++ b/shop/category/templates/create_category.html
@@ -6,7 +6,16 @@
     <link rel="stylesheet" href="{{ url_for('.static', filename='css/style.css') }}">
 </head>
 <body>
-123
+<form method="POST" enctype=multipart/form-data>
+
+    <label for="title">
+        <input type="text" name="title" id="title">
+    </label>
+    <label> Изображение
+        <input type="file" name="file" required>
+    </label>
+    <input type="submit">
+</form>
 <script src="{{ url_for('.static', filename='js/script.js') }}"></script>
 </body>
 </html>
